# fishotron

./: .gitignore  3d.cpp  Atomic.h  CMakeLists.txt  FiducialMap.cpp  FiducialMap.h  Makefile  PageSizes.h  README.md  angle.cpp  camera.cpp  camera.h  json.cpp  live.cpp  main.cpp  push.py  rectangle.cpp  rectangle.h
