cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
add_executable( json json.cpp rectangle.cpp FiducialMap.cpp)
target_link_libraries( json ${OpenCV_LIBS} )
target_link_libraries( json chilitags_static)
add_executable( live live.cpp rectangle.cpp FiducialMap.cpp)
target_link_libraries( live ${OpenCV_LIBS} )
target_link_libraries( live chilitags_static)
set_property(TARGET live PROPERTY CXX_STANDARD 11)