cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
find_package(CURL REQUIRED)
find_package(Threads REQUIRED)
add_executable( json json.cpp camera.cpp rectangle.cpp FiducialMap.cpp)
target_link_libraries( json ${OpenCV_LIBS} ${CURL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} chilitags_static)
add_executable( live live.cpp rectangle.cpp FiducialMap.cpp)
target_link_libraries( live ${OpenCV_LIBS} )
target_link_libraries( live chilitags_static)
file(COPY push.py DESTINATION ./)
SET(CMAKE_CXX_FLAGS "-std=c++11")
